# prefect-start

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  README.md  prefect.yaml  pyproject.toml
.github/workflows/: static-analysis.yml  terraform-docs.yml
flows/: hello.py  jetstream.py
infra/aws/: .terraform-docs.yml  README.md  aws.tf  outputs.tf  prefect.tf  providers.tf  variables.tf
